# openparsec

./: .cproject  .editorconifg  .gitattributes  .gitignore  .gitmodules  .project  CHANGELOG  CMakeLists.txt  CREDITS  LICENSE.artwork_sound  LICENSE.readme  Makefile  Makefile.new  README.1ST  README.md  TODO  VERSION  rules.make
.github/workflows/: c-cpp.yml  windows-build.yml
Win32/: OpenParsec.sln
Win32/libParsec/: libParsec.vcproj
debian/: .gitignore  Jenkinsfile  README.Debian  changelog  com.openparsec.client.desktop  com.openparsec.client.metainfo.xml  control  copyright  files  manpages  openparsec-server.default  openparsec-server.init  openparsec-server.install  openparsec-server.service  openparsec-server.substvars  openparsec.install  openparsec.lintian-overrides.ex  openparsec.substvars  openparsec.xcf  parsec  parsec-server  parsec-server.6  parsec.6  rules  source.lintian-overrides.ex
docs/: makeodt_readme.txt  todo.txt  tutorial.txt
parsec_root/client/: .gitignore  infobar12.tga  init.con  navbar11.tga  navbar12.tga  parsecrc.con  planet.con  planet2.od2  planet2.tga  readme.txt  symbol.tga
parsec_root/client/cons/: .bindings.con.swp  bindings.con  strmpldr.con  user.con
parsec_root/client/data/: _f2_2.con  _f7_2.con  _missls.con  _panback.con  a_missl1.3df  conf_off.3df  corner1.3df  cp_b2e.3df  cp_b3.3df  cp_d1s.3df  cross.bdt  eg01_06a.3df  eg01_11a.3df  env2_03.odt  env2d_02.odt  exp1_09.bdt  expl_003.3df  expl_005.3df  expl_030.3df  f5_05.3df  fi06_17a.3df  font2.pfg  gate_009.3df  gate_021.3df  gate_060.3df  glow06.3df  in01_00a.3df  in01c00a.od2  mi01a00a.od2  mine.bdt  n_light.3df  pc01_02a.3df  phaser2a.3df  precache.3df  pscdata3.lst  radar_.bdt  scv10.3df  sett_off.3df  sky3_dn.3df  sky6_lf.3df  (+8 more)
parsec_root/master/: .master.pl.swp  master.pl
parsec_root/server/: .gitignore  _dummy.con  _f1_2.con  _f2_2.con  _f3_2.con  _f4_2.con  _f5_2.con  _f6_2.con  _f7_2.con  _f8_2.con  _level.con  _powerups.con  _props.con  _strgate.con  _telep.con  boot_sv.con  em01_00a.od2  extra1.odt  fi05_00a.od2  fi06_00a.od2  fi07_00a.od2  fi08_00a.od2  fighter1.od2  fighter2.od2  fighter3.od2  fighter4.od2  hc01_00a.od2  hc01a00a.od2  hc01b00a.od2  hc01c00a.od2  in01b00a.od2  in01d00a.od2  in01e00a.od2  lc02_00a.od2  lc02a00a.od2  lc02b00a.od2  lc03_00a.od2  lc03a00a.od2  lc03b00a.od2  ld01_00a.od2  (+18 more)
scripts/: get_arch_flags  scan_for_files
src/: .server.diff.swp  CMakeLists.txt  Makefile  parsec_server.patch
src/libparsec/: Makefile  con_arg.cpp  con_tab.cpp  con_vald.cpp  debug.cpp  e_modulemanager.cpp  e_relist.cpp  g_emp.cpp  g_extra.cpp  g_telep.cpp  net_pckt_gmsv.cpp  net_stream.cpp  net_swap.cpp  net_util.cpp  net_wrap.cpp  obj_clas.cpp  obj_creg.cpp  obj_cust.cpp  obj_odt.cpp  obj_type.cpp  sl_path.cpp  sl_timer.cpp  sw_path.cpp  sw_timer.cpp  sys_date.cpp  sys_file.cpp  sys_swap.cpp  utl_bsp.cpp  utl_clip.cpp  utl_clpo.cpp  utl_cull.cpp  utl_logfile.cpp  utl_math.cpp  utl_math2.cpp
src/libparsec/include/: con_arg.h  (+86 more)
src/parsec/: CMakeLists.txt  Makefile  aud_bkgn.cpp  aud_comm.cpp  aud_game.cpp  aud_glob.cpp  aud_sdlmixer.cpp  aud_supp.cpp  con_act.cpp  con_aux.cpp  con_cani.cpp  con_com.cpp  con_conf.cpp  con_ext.cpp  con_geom.cpp  con_info.cpp  con_int.cpp  con_kmap.cpp  con_list.cpp  con_load.cpp  con_main.cpp  con_path.cpp  con_rc.cpp  con_say.cpp  con_shad.cpp  con_std.cpp  con_tani.cpp  d_glob.cpp  d_misc.cpp  do_bmap.cpp  do_font.cpp  do_iter.cpp  do_misc.cpp  do_patch.cpp  e_callbk.cpp  e_colani.cpp  e_color.cpp  e_demo.cpp  e_draw.cpp  e_events.cpp  (+120 more)
src/parsec/include/: al_initg.h  aud_bkgn.h  aud_comm.h  aud_defs.h  aud_game.h  aud_glob.h  aud_subh.h  aud_supp.h  con_act.h  con_aux.h  con_cani.h  con_com.h  con_conf.h  con_ext.h  con_geom.h  con_info.h  con_int.h  con_kmap.h  con_list.h  con_load.h  con_main.h  con_path.h  con_rc.h  con_say.h  con_shad.h  con_std.h  con_tani.h  d_bmap.h  d_font.h  d_fontt.h  d_glob.h  d_iter.h  d_misc.h  d_patch.h  do_bmap.h  do_font.h  do_iter.h  do_misc.h  do_patch.h  e_callbk.h  (+146 more)
src/parsec/win_rc/: sw_rsrc.rc
src/parsec_server/: .cproject  .project  Makefile  MasterServer.cpp  MasterServerItem.cpp  con_act_sv.cpp  con_aux_sv.cpp  con_com_sv.cpp  con_ext_sv.cpp  con_info_sv.cpp  con_int_sv.cpp  con_list_sv.cpp  con_load_sv.cpp  con_main_sv.cpp  con_std_sv.cpp  e_colldet_sv.cpp  e_connmanager.cpp  e_gameserver.cpp  e_global_sv.cpp  e_packethandler.cpp  e_simnetinput.cpp  e_simnetoutput.cpp  e_simplayerinfo.cpp  e_simulator.cpp  e_world.cpp  g_main_sv.cpp  g_player.cpp  g_stgate_sv.cpp  inp_main_sv.cpp  net_packetdriver.cpp  net_util_sv.cpp  nl_udpdriver.cpp  sl_util_sv.cpp  sv_main.cpp  sys_err_sv.cpp  sys_msg_sv.cpp  sys_util_sv.cpp
tool_src/: redhat_install_build_deps32.sh
tool_src/BspLib/: AodFormat.cpp  AodFormat.h  AodInput.cpp  AodInput.h  AodOutput.cpp  AodOutput.h  BRep.cpp  BRep.h  BSPNode.cpp  BSPNode.h  BSPTree.cpp  BSPTree.h  BoundingBox.cpp  BoundingBox.h  BspFormat.cpp  BspFormat.h  BspInput.cpp  BspInput.h  BspLib.vcproj  BspLib.vcxproj  BspLib.vcxproj.filters  BspLibDefs.h  BspObject.cpp  BspObject.h  BspObjectList.cpp  BspObjectList.h  BspOutput.cpp  BspOutput.h  BspTool.cpp  BspTool.h  Chunk.h  EpsAreas.cpp  Face.cpp  Face.h  IOData3D.cpp  IOData3D.h  InputData3D.cpp  InputData3D.h  LineSeg.cpp  LineSeg2.h  (+48 more)
tool_src/QvLib/: Makefile  QvBasic.h  QvChildList.h  QvCone.h  QvCoordinate3.cpp  QvCoordinate3.h  QvCube.h  QvCylinder.h  QvDB.h  QvDb.cpp  QvDebugError.cpp  QvDebugError.h  QvDict.h  QvDirectionalLight.h  QvElement.cpp  QvElement.h  QvField.cpp  QvField.h  QvFieldData.cpp  QvFieldData.h  QvFields.h  QvGroup.cpp  QvGroup.h  QvIndexedFaceSet.cpp  QvIndexedFaceSet.h  QvIndexedLineSet.h  QvInfo.cpp  QvInfo.h  QvInput.cpp  QvInput.h  QvLevelOfDetail.cpp  QvLevelOfDetail.h  QvLib.vcproj  QvLib.vcxproj  QvLists.cpp  QvLists.h  QvMFColor.cpp  QvMFColor.h  QvMFFloat.cpp  QvMFFloat.h  (+69 more)
tool_src/makeodt/: Makefile  getopt.cpp  getopt.h  makeodt  makeodt.cpp  makeodt.h  makeodt.sln  makeodt.vcproj  makeodt.vcxproj  planet1.wrl  test_ship  test_ship2.vrml  test_ship2.vrml~  test_ship~
(+50 files in other folders)
